2007-12-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 499: Small change in the numbering of the enum types (control.h).
	           This allows 256 format7 modes, which may happen in 1.32.

2007-12-10 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 498: make system_*log_handler and *log_data static. Tell a word
	           about DC1394_DEBUG in log.h (Rudolf Leitgeb)
	* SVN 497: Finalize the error API
	* SVN 496: Added two boolean members to dc1394video_frame_t:
	           little_endian and data_in_padding.

2007-12-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 495: Compile fix for juju (thanks to Chao Wang)
        * SVN 494: Compile fix for juju (thanks to Chris Rankin)

2007-12-06 David Moore  <dcm@acm.org>
	* SVN 493: Compile fix for Mac OS X.

2007-12-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 492: Changed some comments from error to debug.
	* SVN 491: Printing functions now all have a file descriptor argument.
	* SVN 490: Replace all fprintf errors by logging. Some lowest level
	           errors using fprintf remain. Definitely needs testing on
		   other platforms than Linux. 2-3 more internal functions had
		   their dc1394_ prefix removed.
	* SVN 489: Retire dc1394_cleanup_iso_channel_and_bandwidth.
	* SVN 488: reserve dc1394_ prefix for exported functions.
	           channel/bandwidth functions still have the prefix since
		   we plan to export them soon.
        * SVN 487: - Applied a consistant naming scheme for all functions.
	           - Temporary (?) implementation of a DC1394_DEBUG
		     compiler flag
	
2007-12-05 David Moore  <dcm@acm.org>
	* SVN 486: Allow retries when reading config ROMs under linux to
		   deal with sluggish cameras.
	* SVN 485: fix broken _get_string functions, which weren't actually
		   returning any data.
	* SVN 484: clean up error handling in grab_gray_image

2007-12-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 483: add "-std=gnu99" to compiler options